<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.uimapfragment.MapFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/make_photo_on_map_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.yandex.mapkit.mapview.MapView>

    <ImageView
        android:id="@+id/current_location"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="#888787"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/outline_near_me_24"
        app:layout_constraintBottom_toTopOf="@+id/make_photo_on_map_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/current_location_symbol" />

    <Button

        android:id="@+id/zoom_in_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#888787"
        android:gravity="center_vertical"
        android:text="@string/plus"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/make_photo_on_map_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zoom_out_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#888787"
        android:text="@string/minus"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zoom_in_button" />

    <Button
        android:id="@+id/make_photo_on_map_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#1A659E"
        android:text="@string/make_a_new_photo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/back_to_gallery_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_to_gallery_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#1A659E"
        android:text="@string/back_to_gallery"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/describe_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/make_photo_on_map_button"
        app:layout_constraintEnd_toStartOf="@id/current_location"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/close_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:backgroundTint="#888787"
            android:text="@string/x_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/name_on_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/name_on_card"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/address_on_card"
            app:layout_constraintTop_toBottomOf="@id/close_button" />

        <TextView
            android:id="@+id/address_on_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/address_on_card"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_on_card"
            app:layout_constraintBottom_toTopOf="@id/type_on_card"/>

        <TextView
            android:id="@+id/type_on_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/type_on_card"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_on_card"
            app:layout_constraintBottom_toTopOf="@id/coordinates_on_card"/>

        <TextView
            android:id="@+id/coordinates_on_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/coordinates_on_card"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/type_on_card"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>