<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.uimakephotofragment.MakePhotoFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/photo_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/make_photo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/make_photo_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/make_photo_button"
        android:backgroundTint="#1A659E"
        app:layout_constraintBottom_toTopOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="#1A659E"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:text="@string/back_to_gallery_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/to_map_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/to_map_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/open_map"
        android:backgroundTint="#1A659E"
        android:layout_marginStart="5dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>